--- a/Natours/starter/sass/components/_form.scss
+++ b/Natours/starter/sass/components/_form.scss
@@ -1,26 +1,29 @@
 .form {
     &__group:not(:last-child) {
         margin-bottom: 2rem;
-
     }
 
     &__input {
         font-size: 1.5rem;
         font-family: inherit;
+        color: inherit;
         padding: 1.5rem 2rem;
         border-radius: 2px;
-        background-color: rgba(white, .5);
+        background-color: rgba($color-white, .5);
         border: none;
         border-bottom: 3px solid transparent;
         width: 90%;
         display: block;
-        color: inherit;
         transition: all .3s;
+
+        @include respond(tab-port) {
+            width: 100%;
+        }
 
         &:focus {
             outline: none;
-            box-shadow: 0 1rem rem rgba(black, .1);
-            border-bottom: 3px solid $color-primary-dark;
+            box-shadow: 0 1rem 2rem rgba($color-black, .1);
+            border-bottom: 3px solid $color-primary;
         }
 
         &:focus:invalid {
@@ -28,9 +31,10 @@
         }
 
         &::-webkit-input-placeholder {
-            color: gray;
+            color: $color-grey-dark-2;
         }
     }
+
 
     &__label {
         font-size: 1.2rem;
@@ -41,7 +45,7 @@
         transition: all .3s;
     }
 
-    &__input:placeholder-shown+&__label {
+    &__input:placeholder-shown + &__label {
         opacity: 0;
         visibility: hidden;
         transform: translateY(-4rem);
@@ -49,12 +53,19 @@
 
 
     &__radio-group {
-        width: 48%;
+        width: 49%;
         display: inline-block;
+
+        @include respond(tab-port) {
+            width: 100%;
+            margin-bottom: 2rem;
+        }
     }
+
     &__radio-input {
         display: none;
     }
+    
     &__radio-label {
         font-size: $default-font-size;
         cursor: pointer;
@@ -65,7 +76,7 @@
     &__radio-button {
         height: 3rem;
         width: 3rem;
-        border: 3px solid $color-primary-dark;
+        border: 5px solid $color-primary;
         border-radius: 50%;
         display: inline-block;
         position: absolute;
@@ -73,22 +84,22 @@
         top: -.4rem;
 
         &::after {
-            height: 1.3rem;
-            display: block;
-            width: 1.3rem;
             content: "";
+            display: block;
+            height: 1.3rem;
+            width: 1.3rem;
             border-radius: 50%;
             position: absolute;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            background-color: $color-primary-dark;
+            background-color: $color-primary;
             opacity: 0;
             transition: opacity .2s;
-       
         }
     }
-    &__radio-input:checked + &__radio-label &__radio-button::after{
+
+    &__radio-input:checked ~ &__radio-label &__radio-button::after {
         opacity: 1;
     }
 }
