--- a/Natours/starter/sass/layout/_footer.scss
+++ b/Natours/starter/sass/layout/_footer.scss
@@ -4,11 +4,17 @@
     font-size: 1.4rem;
     color: $color-grey-light-1;
 
+    @include respond(tab-port) {
+        padding: 8rem 0;
+    }
 
     &__logo-box {
         text-align: center;
         margin-bottom: 8rem;
 
+        @include respond(tab-port) {
+            margin-bottom: 6rem;
+        }
     }
 
     &__logo {
@@ -21,6 +27,10 @@
         padding-top: 2rem;
         display: inline-block;
 
+        @include respond(tab-port) {
+            width: 100%;
+            text-align: center;
+        }
     }
 
     &__list {
@@ -50,6 +60,7 @@
         &:active {
             color: $color-primary;
             box-shadow: 0 1rem 2rem rgba($color-black, .4);
+            transform: rotate(5deg) scale(1.3);
         }
     }
 
@@ -59,5 +70,9 @@
         width: 80%;
         float: right;
 
+        @include respond(tab-port) {
+            width: 100%;
+            float: none;
+        }
     }
 }
