--- a/Natours/starter/sass/main.scss
+++ b/Natours/starter/sass/main.scss
@@ -12,14 +12,13 @@
 @import "components/story";
 @import "components/bg-video";
 @import "components/form";
-
 @import "components/composition";
 @import "components/feature-box";
+@import "components/popup";
 
 @import "layout/grid";
 @import "layout/header";
 @import "layout/footer";
-@import "layout/navigation";
 @import "layout/navigation";
 
 @import "pages/home";
